--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="already_have_account">Already have an account?</string>
     <string name="sign_in">Sign in</string>
     <string name="facebook_app_id">957458147610836</string>
+    <string name="title_activity_sign_in_screen">SignInScreen</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_welcome_screen">WelcomeScreen</string>
 </resources>
